# shellm

./: .gitignore  README.md  RECOVERY_STATE.md  RUN_LOCAL.md  TERMINAL_DEMO.md  draft-blog-post.md  install.sh  llm  logo-ascii-art.txt  mem  philosophy.md  shelllm  shellm  shellm-docker  shellm-docker-broker  shellm-explore  shellm-slides.html  shelly
deploy/: DEPLOY.md  setup.sh  shellm-web.service  update.sh
web/: README.md  pyproject.toml
web/design/: data-model.md  future-work.md  overview.md
web/design/20260710/: PLAN.md  SESSION.md  TIMELINE_PLAN.md  shellm-field-guide.html
web/src/shellm_web/: __init__.py  chat.py  cli.py  control.py  discovery.py  envfile.py  liveness.py  llm_health.py  logs.py  safety.py  server.py  thinkers.py  trajectory.py  tree.py
web/tests/: conftest.py  test_import_export.py  test_llm_health.py  test_recap_api.py  test_self_update.py  test_thinkers_and_control.py  test_trajectory.py  test_trajectory_cache.py  test_tree_and_safety.py
web/viewer/: package.json
web/viewer/app/: app.css  routes.ts
web/viewer/app/components/: blob-output.tsx  expandable-text.tsx  follow-pin.tsx  fork-tree.tsx  identity-tabs.tsx  live-badge.tsx  navbar.tsx  run-group.tsx  step-card.tsx  step-header.tsx  stream.tsx  thinker-controls.tsx  timeline-bar.tsx  timeline-detail.tsx  timeline-view.tsx
web/viewer/app/lib/: api.ts  step-colors.ts  timeline-model.ts  traj-context.ts  types.ts  use-mindlog.ts
web/viewer/app/routes/: chat.tsx  config.tsx  home.tsx  identity.tsx  memories.tsx  recap.tsx  sub-traj.tsx  thinkers.tsx  timeline.tsx
(+133 files in other folders)
