[project]
name = "shellm-web"
version = "0.1.0"
description = "Web viewer for shellm mind logs and trajectory trees"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
shellm-web = "shellm_web.cli:main"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shellm_web"]
